# Icepack

cli/: .gitignore  Cargo.toml  build.rs
cli/lib/lzrw/: CMakeLists.txt  lzrw.c
cli/src/: archive.rs  args.rs  builder.rs  handlers.rs  lzrw.rs  main.rs  utils.rs
